--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,7 +56,8 @@
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
+  "C_Cpp.default.compilerPath": "",
   "files.associations": {
-    "stdlib.h": "c"
+    "sdl.h": "c"
   }
 }
