--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,7 @@
     "font.h": "c",
     "sdl_messagebox.h": "c",
     "sdl_log.h": "c",
-    "stb_image.h": "c"
+    "stb_image.h": "c",
+    "stdio.h": "c"
   }
 }
