--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "C_Cpp_Runner.cCompilerPath": "C:/MinGW/bin/gcc.exe",
+  "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
   "C_Cpp_Runner.debuggerPath": "gdb",
   "C_Cpp_Runner.cStandard": "",
@@ -55,16 +55,5 @@
   "C_Cpp_Runner.useLeakSanitizer": false,
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
-  "C_Cpp_Runner.msvcSecureNoWarnings": false,
-  "C_Cpp.default.compilerPath": "",
-  "files.associations": {
-    "sdl.h": "c",
-    "math.h": "c",
-    "font.h": "c",
-    "sdl_messagebox.h": "c",
-    "sdl_log.h": "c",
-    "stb_image.h": "c",
-    "stdio.h": "c",
-    "sstream": "c"
-  }
+  "C_Cpp_Runner.msvcSecureNoWarnings": false
 }
