--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,10 +14,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: configure
-      run: ./configure
+      # run: ./configure
     - name: make all
       run: make all
-    - name: make check
-      run: make check
-    - name: make distcheck
-      run: make distcheck
