--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,6 +64,10 @@
     "string_view": "c",
     "format": "c",
     "initializer_list": "c",
-    "span": "c"
+    "span": "c",
+    "stdbool.h": "c",
+    "cstdio": "cpp",
+    "sv.h": "c",
+    "assert.h": "c"
   }
 }
