SDL Complete, now rewrite in OpenGL

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,6 +71,7 @@
     "assert.h": "c",
     "sdllogger.h": "c",
     "string": "c",
-    "variant": "c"
+    "variant": "c",
+    "stb_image.h": "c"
   }
 }
